# RSSchool_MLIntro2022q1_capstone_project

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: main.yml
materials/: README.md
src/rsschool_mlintro2022q1_capstone_project/: data_profiling.py  dataset.py  find_best.py  models.py  predict.py  settings.py  train.py
tests/: runner.py  test_train.py  vars_test.py
