[tool.poetry]
name = "rsschool_mlintro2022q1_capstone_project"
version = "0.1.0"
description = "Capstone project for RS School Machine Learning course."
authors = ["Ivan Kosternoi <ivan.kosternoy@gmail.com>"]

[tool.poetry.scripts]
profile_data = "rsschool_mlintro2022q1_capstone_project.data_profiling:profile_data"
train = "rsschool_mlintro2022q1_capstone_project.train:train"
find_best = "rsschool_mlintro2022q1_capstone_project.find_best:find_best"
train_by_cfg = "rsschool_mlintro2022q1_capstone_project.train:train_by_cfg"
predict = "rsschool_mlintro2022q1_capstone_project.predict:predict"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.5"
pandas-profiling = "^3.2.0"
click = "^8.1.3"
sklearn = "^0.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
nox = "^2022.1.7"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
